--- a/Documentation.html
+++ b/Documentation.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<embed src="documentation-pdf.pdf" width="100%" height="100%" />                                          
+<embed src="documentation-pdf.pdf" width="100%" height="100%" type="application/pdf"/>
 
 
 
