--- a/main.html
+++ b/main.html
@@ -31,25 +31,22 @@
 
   <div class="foo"> 
     <ul class="navlink">
-    	<li><button id="homebut" onclick="intchange()">Home</button></li>
+    	<li><button id="homebut" onclick="dochange('introduction.html')">Home</button></li>
         <li><button>Search views</button>
        	  <ul class="subnav">
-        	<li><button id="motifbut"  onclick="motchange()">Motif view</button></li>
-        	<li><button id="pairbut"  onclick="pairchange()">Pairshift view</button></li>
-        	<li><button id="vennbut"  onclick="vennchange()">Venn diagramm view</button></li>
-		<li><button id="exbut"  onclick="exchange()">Experiment view</button></li>
+        	<li><button id="motifbut"  onclick="dochange('motif_preview.php')">Motif view</button></li>
+        	<li><button id="pairbut"  onclick="dochange('paired_shift_preview.php?exp1=x&exp2=x&exp3=x&motive=x&motifid=x&limit=25&low_limit=-25&formminid=1&formmaxid=10000&formminelem=1&formmaxelem=12000')">Pairshift view</button></li>
+        	<li><button id="vennbut"  onclick="dochange('venn_preview.php?exp1=1&exp2=2&exp3=3&motive=CTCF&motifid=32&mnelem=1000')">Venn diagramm view</button></li>
+		<li><button id="exbut"  onclick="dochange('experiment_preview.php')">Experiment view</button></li>
+		<li><button id="snpbut" onclick="dochange('dbsnp.php')">dbSNP view</li>
                 <a style="padding:0px;" href="http://summit.med.unideb.hu/jbrowse" target="_blank"><li><button id="jbrbut">Genome view</button></li></a>
         </ul></li>
-        <li><button id="docbut" onclick="dochange()" >Documentation</button></li>
-        <li><button id="helbut" onclick="helchange()">Help</button></li>
-        <li><button id="tutbut" onclick="tutchange()">Tutorial</button></li>
-        <li><button id="globut" onclick="glochange()">Glossary</button></li>
+        <li><button id="docbut" onclick="dochange('Documentation.html')" >Documentation</button></li>
+        <li><button id="helbut" onclick="dochange('Help.html')">Help</button></li>
+        <li><button id="tutbut" onclick="dochange('tutorial.html')">Tutorial</button></li>
+        <li><button id="globut" onclick="dochange('glossary.html')">Glossary</button></li>
     </ul>
 	</div>
-  
-  
-
-   
     <g style="height:200%">
      <iframe id="ifrm" src="http://summit.med.unideb.hu/summitdb/introduction.html"  frameborder="0" scrolling="yes" >
 </iframe>
@@ -60,22 +57,7 @@
 
  
 <script>
-
-function dochange() { document.getElementById("ifrm").src = "Documentation.html"};
-function helchange() { document.getElementById("ifrm").src = "Help.html"};
-function intchange() { document.getElementById("ifrm").src = "introduction.html"};
-function motchange() { document.getElementById("ifrm").src = "motif_preview.php"};
-function pairchange() { document.getElementById("ifrm").src = "paired_shift_preview.php?exp1=x&exp2=x&exp3=x&motive=x&motifid=x&limit=25&low_limit=-25&formminid=1&formmaxid=10000&formminelem=1&formmaxelem=12000"};
-function vennchange() { document.getElementById("ifrm").src = "venn_preview.php?exp1=1&exp2=2&exp3=3&motive=CTCF&motifid=32&mnelem=1000"};
-function exchange() { document.getElementById("ifrm").src = "experiment_preview.php"};
-function tutchange() { document.getElementById("ifrm").src = "tutorial.html"};
-function glochange() { document.getElementById("ifrm").src = "glossary.html"};
-function jbchange() { document.getElementById("ifrm").src = "summit.med.unideb.hu/jbrowse/"};
-
+function dochange(target) { document.getElementById("ifrm").src = target};
 </script>
-
-
-
-
 </body>
 </html>
