Removing unecessary codes: part 15

--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Welcome to SummitDB</title>
 <link href="favicon.png" rel="icon"  type="image/png" />
-<link href="base.css" rel="stylesheet" type="text/css" />
+<link href="master.css" rel="stylesheet" type="text/css" />
 <style type="text/css">
 
 </style>
-<link href="slider.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div class="container_16">
