--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
 <body>
 <div class="container_16">
 <!--topdiv -->
-<a href="https://www.edu.unideb.hu/"><img src="University_logo.png" alt="SummitDB"  title="SummitDB" class="logo"/>
+<a href="https://www.edu.unideb.hu/"><img src="University_logo.png" alt="SummitDB"  title="SummitDB" class="logo"/></a>
   <img src="logo.gif" alt="SummitDB"  title="SummitDB" class="logomid"/>
   <a href="http://www.naik.hu/en/"><img src="naik-logo.png" alt="SummitDB"  title="SummitDB" class="logo2"/>
-
   </a>
 </div>                                               
 
@@ -45,16 +44,11 @@
         <li><button id="tutbut" onclick="dochange('tutorial.html')">Tutorial</button></li>
         <li><button id="globut" onclick="dochange('glossary.html')">Glossary</button></li>
     </ul>
-	</div>
-    <g style="height:200%">
+  </div>
+    <div id="iframeparent">
      <iframe id="ifrm" src="http://summit.med.unideb.hu/summitdb/introduction.html"  frameborder="0" scrolling="yes" >
-</iframe>
-
-
- 
-</div>
-
- 
+     </iframe>
+    </div>
 <script>
 function dochange(target) { document.getElementById("ifrm").src = target};
 </script>
