Some small changes

--- a/glossary.html
+++ b/glossary.html
@@ -3,22 +3,11 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Welcome to SummitDB</title>
 <link href="favicon.png" rel="icon"  type="image/png" />
-<link href="slideshow.css" rel="stylesheet" type="text/css" />
-
-
-</style>
 </head>
 <body>
-
-
-
-
-
 <h2>Glossary</h2>
-
-<p>
-
-Average distance:</b> The average of distances between every  summit and motif center pair at a given ChIP-seq experiment and consensus motif pair. <br><br><b>
+<b>Average distance:</b>
+The average of distances between every  summit and motif center pair at a given ChIP-seq experiment and consensus motif pair. <br><br><b>
 Consensus binding site:</b> One of the motifs from the Consensus motif binding site set
 <br><br><b>Consensus motif binding site set:</b> The most probable genome-wide binding site set of the transcription factors with common JASPAR Core motif. It contains the mapped TFBS matrix genomic positions which are overlapping with a corresponding peak region (i.e. the ones with the assigned antibodies). These sets intend to represent all possible experimentally validated binding sites of a given transcription factor.  
 <br><br><b>ChIP-seq:</b> A functional genomics technique	involving Chromatin immunoprecipitation of protein-nucleic acid complex followed by next-generation sequencing of the bound nucleic acid. It is used to determine genome-wide the binding position of proteins on chromosomal DNA at genome‑wide scale.
@@ -37,30 +26,5 @@ Consensus binding site:</b> One of the motifs from the Consensus motif binding s
 <br><br><b>TF:</b> Transcription Factor. In this database, TF is used for any protein which can be immune‑precipitated together with its bound DNA, and if a specific binding site from the literature could be assigned to it.
 <br><br><b>TFBS:</b> Transcription Factor Binding Site. A specific sequence in the genome, which matches to one or more TFBS matrix
 <br><br><b>TFBS matrix:</b> A position weight matrix describing the consensus binding site for a  TF. It was determined using the given JASPAR core matrix for the TF by applying the HOMER motif optimization algorithm on the merged peak region obtained from the corresponding ChIP-seq experiments.
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </body>
 </html>
