--- a/Help.html
+++ b/Help.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" type="text/css" href="master.css" />
 <title>Welcome to SummitDB</title>
 </head>
 <body>
