--- a/tutorial.html
+++ b/tutorial.html
@@ -23,6 +23,7 @@
 		p.ctl { font-size: 12pt }
 		a:link { color: #0000ff }
 	</style>
+	<link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body lang="hu-HU" link="#0000ff" dir="ltr">
 <p class="western" style="margin-bottom: 0in; line-height: 100%"><font face="Arial, serif"><span lang="en-US"><b>Tutorial:</b></span></font></p>
@@ -52,7 +53,7 @@ on the “Search views” menu and then click the “MotifView”
 button. </span></font></font></font>
 </p>
 <p lang="en-US" style="margin-left: 0.5in; margin-bottom: 0in; line-height: 100%">
-<img src="tutorial_html_962303736547397d.gif" name="Kép 1" align="left" hspace="12" vspace="1" width="507" height="232" border="0"/>
+<img src="tutorial_html_962303736547397d.gif" name="Kép 1" hspace="12" vspace="1" width="507" height="232" border="0"/>
 <br/>
 
 </p>
@@ -63,13 +64,12 @@ button. </span></font></font></font>
 <ol start="2">
 	<li/>
 <p style="margin-bottom: 0in; line-height: 100%"><font color="#00000a"><font face="Cambria, serif"><font face="Arial, serif"><span lang="en-US">In
-	the “Set a motif” dropdown box, select POU2F2. </span></font></font></font><img src="tutorial_html_defca816efda63ce.gif" name="Kép 7" align="left" hspace="12" width="507" height="236" border="0"/>
+	the “Set a motif” dropdown box, select POU2F2. </span></font></font></font>
 
 	</p>
 </ol>
 <p lang="en-US" class="western" style="margin-bottom: 0in; line-height: 100%">
-<br/>
-
+<img src="tutorial_html_defca816efda63ce.gif" name="Kép 7" hspace="12" width="507" height="236" border="0"/>
 </p>
 <ol start="3">
 	<li/>
@@ -77,7 +77,7 @@ button. </span></font></font></font>
 	on the “Go to MotifView” button to update the page.</span></font></font></font></p>
 </ol>
 <p lang="en-US" style="margin-left: 0.5in; margin-bottom: 0in; line-height: 100%">
-<img src="tutorial_html_3c882a23b22302f8.gif" name="Kép 8" align="left" hspace="12" vspace="1" width="507" height="188" border="0"/>
+<img src="tutorial_html_3c882a23b22302f8.gif" name="Kép 8" hspace="12" vspace="1" width="507" height="188" border="0"/>
 <br/>
 
 </p>
@@ -99,12 +99,10 @@ button. </span></font></font></font>
 	target &gt; 20 different protein). Thus, certain TFs are presented
 	in multiple experiments as indicated by the number in the front of
 	the TF’s name (for example “5 P300”).</span></font> 
-	<img src="tutorial_html_3a3930c0ae874b38.gif" name="Kép 9" align="bottom" width="492" height="853" border="0"/>
 </font></font></p>
 </ol>
 <p lang="en-US" class="western" style="margin-bottom: 0in; line-height: 100%">
-<br/>
-
+	<img src="tutorial_html_3a3930c0ae874b38.gif" name="Kép 9" width="492" height="853" border="0"/>
 </p>
 <ol start="5">
 	<li/>
@@ -116,7 +114,7 @@ button. </span></font></font></font>
 	TF’s name.</span></font></font></font></p>
 </ol>
 <p lang="en-US" style="margin-left: 0.5in; margin-bottom: 0in; line-height: 100%">
-<img src="tutorial_html_c5d0e5c6d635558b.gif" name="Kép 10" align="left" hspace="12" vspace="1" width="507" height="290" border="0"/>
+<img src="tutorial_html_c5d0e5c6d635558b.gif" name="Kép 10"  hspace="12" vspace="1" width="507" height="290" border="0"/>
 <br/>
 
 </p>
@@ -126,7 +124,7 @@ button. </span></font></font></font>
 	legend in the right-hand side window shows that data from two POU2F2
 	ChIP-seq experiments are available. After hiding all scatters, click
 	on the purple square next to POU2F2 and two scatters will appear in
-	the graph area. </span></font></font></font><img src="tutorial_html_a7c368ff16171aa2.gif" name="Kép 11" align="left" hspace="12" vspace="1" width="507" height="232" border="0"/>
+	the graph area. </span></font></font></font><img src="tutorial_html_a7c368ff16171aa2.gif" name="Kép 11"  hspace="12" vspace="1" width="507" height="232" border="0"/>
 
 	</p>
 </ol>
@@ -167,13 +165,12 @@ button. </span></font></font></font>
 	which will bring up two more scatters. Although the binding position
 	of EB1 overlaps with that of POU2F2, EB1 has a different binding
 	motif. Thus, we hypothesize that both P300 and EB1 bind POU2F2 and
-	the complex binds to the binding site of POU2F2.</span></font> </font></font><img src="tutorial_html_bd8633bd63242401.gif" name="Kép 12" align="left" hspace="12" vspace="1" width="507" height="232" border="0"/>
+	the complex binds to the binding site of POU2F2.</span></font> </font></font>
 
 	</p>
 </ol>
 <p lang="en-US" style="margin-left: 0.5in; margin-bottom: 0in; line-height: 100%">
-<br/>
-
+<img src="tutorial_html_bd8633bd63242401.gif" name="Kép 12"  hspace="12" vspace="1" width="507" height="232" border="0"/>
 </p>
 <p lang="en-US" class="western" style="margin-bottom: 0in; line-height: 100%">
 <br/>
@@ -196,11 +193,9 @@ interactive graph. Scatter on the diagram, represents one particular
 ChIP-seq experiment and can be selected by clicking on it.  A maximum
 of three scatters can be selected.</span></font><font face="Arial, serif">
 </font>
-<img src="tutorial_html_b65e80d4f2544c34.gif" name="Kép 13" align="bottom" width="507" height="231" border="0"/>
 </p>
 <p lang="en-US" class="western" style="margin-bottom: 0in; line-height: 100%">
-<br/>
-
+<img src="tutorial_html_b65e80d4f2544c34.gif" name="Kép 13" align="bottom" width="507" height="231" border="0"/>
 </p>
 <p class="western" style="margin-bottom: 0in; line-height: 100%"><font face="Arial, serif"><span lang="en-US">After
 selecting scatters, certain information (cell line, antibody, and
@@ -263,23 +258,19 @@ the middle, the first two buttons allows the user to the Y value,
 which will toggle between two states: standard deviation and element
 number. For further information please check the Help menu. The
 default setting is the standard deviation. </span></font>
-<img src="tutorial_html_a4c401999145a0ec.gif" name="Kép 17" align="bottom" width="507" height="144" border="0"/>
 </p>
 <p lang="en-US" class="western" style="margin-bottom: 0in; line-height: 100%">
-<br/>
-
+<img src="tutorial_html_a4c401999145a0ec.gif" name="Kép 17" align="bottom" width="507" height="144" border="0"/>
 </p>
 <ol>
 	<li/>
 <p style="margin-bottom: 0in; line-height: 100%"><font color="#00000a"><font face="Cambria, serif"><font face="Arial, serif"><span lang="en-US">Click
 	on the “element number” to display the motif- experiment peak
 	overlap number as a Y value. </span></font>
-	<img src="tutorial_html_a40071218639f9a2.gif" name="Kép 18" align="bottom" width="507" height="614" border="0"/>
 </font></font></p>
 </ol>
 <p lang="en-US" class="western" style="margin-bottom: 0in; line-height: 100%">
-<br/>
-
+	<img src="tutorial_html_a40071218639f9a2.gif" name="Kép 18" align="bottom" width="507" height="614" border="0"/>
 </p>
 <p class="western" style="margin-bottom: 0in; line-height: 100%"><font face="Arial, serif"><span lang="en-US">The
 page will update and reorder the scatters of experiments depending on
@@ -301,11 +292,9 @@ experiments. To display the unification calculations, the user can
 choose between “average standard deviation vs. average of average
 positions” or “average element numbers vs. average of average
 positions” buttons.</span></font><font face="Arial, serif"> </font>
-<img src="tutorial_html_366efb80fdf9deeb.gif" name="Kép 20" align="bottom" width="507" height="140" border="0"/>
 </p>
 <p lang="en-US" class="western" style="margin-bottom: 0in; line-height: 100%">
-<br/>
-
+<img src="tutorial_html_366efb80fdf9deeb.gif" name="Kép 20" align="bottom" width="507" height="140" border="0"/>
 </p>
 <ol start="2">
 	<li/>
@@ -339,11 +328,9 @@ of its corresponding experiments. </span></font>
 <p class="western" style="margin-bottom: 0in; line-height: 100%"><font face="Arial, serif"><span lang="en-US">The
 buttons on the right-hand side modify the order and the content of
 labels. </span></font>
-<img src="tutorial_html_761e8a40081d366.gif" name="Kép 23" align="bottom" vspace="1" width="507" height="156" border="0"/>
 </p>
 <p lang="en-US" class="western" style="margin-bottom: 0in; line-height: 100%">
-<br/>
-
+<img src="tutorial_html_761e8a40081d366.gif" name="Kép 23" align="bottom" vspace="1" width="507" height="156" border="0"/>
 </p>
 <p class="western" style="margin-bottom: 0in; line-height: 100%"><font face="Arial, serif"><span lang="en-US">The
 first two buttons sort the antibodies according to their names
@@ -388,7 +375,7 @@ will be shown as an example.  </span></font>
 	</p>
 </ol>
 <p lang="en-US" class="western" style="margin-bottom: 0in; line-height: 100%">
-<img src="tutorial_html_787ac218fa47df9d.gif" name="Kép 28" align="left" hspace="12" width="554" height="206" border="0"/>
+<img src="tutorial_html_787ac218fa47df9d.gif" name="Kép 28"  hspace="12" width="554" height="206" border="0"/>
 <br/>
 
 </p>
@@ -399,7 +386,7 @@ will be shown as an example.  </span></font>
 	</p>
 </ol>
 <p lang="en-US" style="margin-left: 0.5in; margin-bottom: 0in; line-height: 100%">
-<img src="tutorial_html_c74dc58277ea6b2f.jpg" name="Kép 29" align="left" hspace="11" vspace="1" width="553" height="264" border="0"/>
+<img src="tutorial_html_c74dc58277ea6b2f.jpg" name="Kép 29"  hspace="11" vspace="1" width="553" height="264" border="0"/>
 <br/>
 
 </p>
@@ -409,15 +396,12 @@ will be shown as an example.  </span></font>
 	on the first upper left (red) dropdown box and select the “MCF7”
 	cell type from the list. Click on the second box from the left in
 	the row, and select CTCF from the list. In the third red box, select
-	the name of the following experiment:
-	“<img src="tutorial_html_702807b2ba267d0f.gif" name="Kép 30" align="left" hspace="11" width="481" height="787" border="0"/>
-hs_BreastAdenocarcinoma_MCF7_cancer_CTCF_SRX1091824”.</span></font>
+	the name of the following experiment: "hs_BreastAdenocarcinoma_MCF7_cancer_CTCF_SRX1091824”.</span></font>
 	</font></font>
 	</p>
 </ol>
 <p lang="en-US" style="margin-left: 0.5in; margin-bottom: 0in; line-height: 100%">
-<br/>
-
+<img src="tutorial_html_702807b2ba267d0f.gif" name="Kép 30"  hspace="11" width="481" height="787" border="0"/>
 </p>
 <ol start="4">
 	<li/>
@@ -436,13 +420,12 @@ hs_BreastAdenocarcinoma_MCF7_cancer_CTCF_SRX1091824”.</span></font>
 	<li/>
 <p style="margin-bottom: 0in; line-height: 100%"><font color="#00000a"><font face="Cambria, serif"><font face="Arial, serif"><span lang="en-US">After
 	setting the parameters, click on the “Refresh Page” button.</span></font>
-	</font></font><span class="sd-abs-pos" style="position: absolute; top: 0.19in; left: 0in; width: 554px"><img src="tutorial_html_f7d4489b92e087f8.gif" name="Kép 71" width="554" height="332" border="0"/>
+	</font></font><span class="sd-abs-pos" style="top: 0.19in; left: 0in; width: 554px">
 </span>
 	</p>
 </ol>
 <p lang="en-US" style="margin-left: 0.5in; margin-bottom: 0in; line-height: 100%">
-<br/>
-
+<img src="tutorial_html_f7d4489b92e087f8.gif" name="Kép 71" width="554" height="332" border="0"/>
 </p>
 <ol start="6">
 	<li/>
@@ -606,12 +589,10 @@ button. </span></font></font></font>
 	the dbSNP ID itself. Write “</span></font><font color="#000000"><font face="Arial, serif"><span lang="en-US">rs1193185173”
 	in the dbSNP search box, then click “Send”.</span></font></font><font face="Arial, serif"><span lang="en-US">
 	</span></font>
-	<img src="tutorial_html_a126cd210fd54626.png" name="Image2" align="bottom" width="486" height="149" border="0"/>
 </font></font></p>
 </ol>
 <p lang="en-US" style="margin-left: 0.5in; margin-bottom: 0in; line-height: 100%">
-<br/>
-
+<img src="tutorial_html_a126cd210fd54626.png" name="Image2" align="bottom" width="486" height="149" border="0"/>
 </p>
 <ol start="3">
 	<li/>
@@ -624,7 +605,7 @@ button. </span></font></font></font>
 	</p>
 </ol>
 <p lang="en-US" class="western" style="margin-bottom: 0in; line-height: 100%">
-<img src="tutorial_html_66bab32e570962de.png" name="Image3" align="left" width="464" height="233" border="0"/>
+<img src="tutorial_html_66bab32e570962de.png" name="Image3"  width="464" height="233" border="0"/>
 <br/>
 
 </p>
@@ -658,13 +639,10 @@ button. </span></font></font></font>
 	SNPs are red. Clicking on them has a similar effect as if the user
 	specified the SNP id in the website. The non-overlapping SNPs are
 	blue and clicking on them will display details about the SNP.</span></font>
-		<img src="tutorial_html_c61d793c4a5b2924.png" name="Image5" align="bottom" width="486" height="233" border="0"/>
 </font></font></p>
 </ol>
 <p lang="en-US" style="margin-top: 0.19in; margin-bottom: 0.19in; line-height: 100%">
-<br/>
-<br/>
-
+		<img src="tutorial_html_c61d793c4a5b2924.png" name="Image5" align="bottom" width="486" height="233" border="0"/>
 </p>
 <p class="western" style="margin-bottom: 0in; line-height: 100%"><font face="Arial, serif"><span lang="en-US"><b>ExperimentView</b></span></font></p>
 <p lang="en-US" class="western" style="margin-bottom: 0in; line-height: 100%">
@@ -805,7 +783,7 @@ tutorial.</font></font></font></p>
 
 </p>
 <p lang="en" style="margin-top: 0.19in; margin-bottom: 0.19in; line-height: 100%">
-<img src="tutorial_html_ed4ab49418ae5382.gif" align="left" hspace="11">
+<img src="tutorial_html_ed4ab49418ae5382.gif"  hspace="11">
   <br clear="left"/>
 </img>
 <br/>
@@ -813,7 +791,7 @@ tutorial.</font></font></font></p>
 
 </p>
 <p style="margin-top: 0.19in; margin-bottom: 0.19in; line-height: 100%">
-<img src="tutorial_html_4d6ccac5c5e94a3.gif" align="right" hspace="11">
+<img src="tutorial_html_4d6ccac5c5e94a3.gif" hspace="11">
   <br clear="right"/>
 </img>
 <font color="#00000a"><font face="Arial, serif"><font size="2" style="font-size: 11pt"><span lang="en">I.
@@ -827,7 +805,7 @@ Than click on “Go to MotifView”</font></font></font></p>
 <br/>
 
 </p>
-<p class="western" style="margin-bottom: 0in; line-height: 100%"><img src="tutorial_html_4bb3f988c9dbe20b.gif" align="left" hspace="11" vspace="1">
+<p class="western" style="margin-bottom: 0in; line-height: 100%"><img src="tutorial_html_4bb3f988c9dbe20b.gif"  hspace="11" vspace="1">
   <br clear="left"/>
 </img>
 <font color="#00000a"><font face="Arial, serif"><span lang="en">I.
@@ -861,7 +839,7 @@ GenomeView”, shown with black arrow.</span></font></font></font></p>
 <font color="#00000a"><font face="Arial, serif"><font size="2" style="font-size: 11pt"><span lang="en">I.
 / 6.</span></font></font></font></p>
 <p style="margin-top: 0.19in; margin-bottom: 0.19in; line-height: 100%">
-<img src="tutorial_html_132ba34002582f92.gif" align="left" hspace="11" vspace="1">
+<img src="tutorial_html_132ba34002582f92.gif"  hspace="11" vspace="1">
   <br clear="left"/>
 </img>
 <font color="#00000a"><font face="Arial, serif"><font size="2" style="font-size: 11pt"><span lang="en">You
@@ -908,7 +886,7 @@ two. </span></font></font></font>
 Adding tracks </span></font></font><font face="Arial, serif"><font size="2" style="font-size: 11pt"><span lang="en"><i>à
 la carte</i></span></font></font></font></p>
 <p style="margin-top: 0.19in; margin-bottom: 0.19in; line-height: 100%"><a name="_GoBack"></a>
-<img src="tutorial_html_7b72fa1ccbd54aa7.gif" align="right" hspace="11">
+<img src="tutorial_html_7b72fa1ccbd54aa7.gif" hspace="11">
   <br clear="right"/>
 </img>
 <font color="#00000a"><font face="Arial, serif"><font size="2" style="font-size: 11pt"><span lang="en">II.
@@ -936,7 +914,7 @@ As there is an overwhelming amount of experiment tracks you can
 filter these more precisely. At the yellow rectangle you can filter
 expreiments based on the antibody and/or cell line that was used.</font></font></font></p>
 <p lang="en" style="margin-top: 0.19in; margin-bottom: 0.19in; line-height: 100%">
-<img src="tutorial_html_f0051b58abfd3b43.gif" align="left" hspace="12" vspace="1">
+<img src="tutorial_html_f0051b58abfd3b43.gif"  hspace="12" vspace="1">
   <br clear="left"/>
 </img>
 <br/>
